# cursor-auto-free

./: .env.example  browser_utils.py  build.mac.command  build.sh  config.py  cursor_auth_manager.py  cursor_pro_keep_alive.py  exit_cursor.py  get_email_code.py  go_cursor_help.py  patch_cursor_get_machine_id.py  pyproject.toml  reset_machine.py  test_email.py
test/: get_veri_code_test.py
