[tool.poetry]
name = "cursor-auto-free"
version = "0.1.0"
description = ""
authors = ["zweix123 <11680125+zweix123@user.noreply.gitee.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
drissionpage = "^4.1.0.17"
colorama = "^0.4.6"
dotenv = "^0.9.9"
types-psutil = "^7.0.0.20250218"
types-requests = "^2.32.0.20250306"
types-colorama = "^0.4.15.20240311"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
